--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -18,8 +18,8 @@
       ansible.builtin.debug:
         msg:
           - "Environnement : {{ deploy_environment }}"
-          - "GPU activé : {{ enable_gpu }}"
-          - "Let's Encrypt : {{ enable_letsencrypt }}"
+          - "GPU activé : {{ system_enable_gpu }}"
+          - "Let's Encrypt : {{ proxy_enable_letsencrypt }}"
 
   roles:
     # Infrastructure de base
@@ -88,14 +88,11 @@
           - "Environnement : {{ deploy_environment }}"
           - ""
           - "🔧 Accès services :"
-          - "  Traefik   : {{ 'https' if enable_letsencrypt else 'http' }}://{{ service_domains.traefik }}"
-          - "  Grafana   : {{ 'https' if enable_letsencrypt else 'http' }}://{{ service_domains.grafana }}"
-          - "  Nextcloud : {{ 'https' if enable_letsencrypt else 'http' }}://{{ service_domains.nextcloud }}"
-          - "  Immich    : {{ 'https' if enable_letsencrypt else 'http' }}://{{ service_domains.immich }}"
-          - "  Jellyfin  : {{ 'https' if enable_letsencrypt else 'http' }}://{{ service_domains.jellyfin }}"
-          - "  PgAdmin   : {{ 'https' if enable_letsencrypt else 'http' }}://pgadmin.{{ base_domain }}"
-          - "  Redis Cmd : {{ 'https' if enable_letsencrypt else 'http' }}://redis.{{ base_domain }}"
-          - ""
+          - "  Traefik   : {{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.traefik }}"
+          - "  Grafana   : {{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.grafana }}"
+          - "  Nextcloud : {{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.nextcloud }}"
+          - "  Immich    : {{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.immich }}"
+          - "  Jellyfin  : {{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.jellyfin }}"
           - "🐳 Services actifs :"
           - "{% for service in services_check.results %}  - {{ service.stdout | default('NOT RUNNING') }}{% endfor %}"
           - ""
