--- a/ansible/roles/immich/tasks/main.yml
+++ b/ansible/roles/immich/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: Générer le fichier .env
   ansible.builtin.template:
-    src: .env.j2
+    src: immich.env.j2
     dest: "{{ docker_compose_path }}/immich/.env"
     mode: '0600'
 
