--- a/ansible/roles/jellyfin/tasks/main.yml
+++ b/ansible/roles/jellyfin/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: Générer le fichier .env
   ansible.builtin.template:
-    src: .env.j2
+    src: jellyfin.env.j2
     dest: "{{ docker_compose_path }}/jellyfin/.env"
     mode: '0600'
 
