--- a/docker/app/immich/docker-compose.yml
+++ b/docker/app/immich/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       - "traefik.http.routers.immich-https.entrypoints=websecure"
       - "traefik.http.routers.immich-https.service=immich"
       - "traefik.http.routers.immich-https.tls=true"
-{% if enable_letsencrypt %}
+{% if proxy_enable_letsencrypt %}
       - "traefik.http.routers.immich-https.tls.certresolver=letsencrypt"
 {% endif %}
       - "traefik.http.services.immich.loadbalancer.server.port=2283"
