Refactor environment variable templates and update associated tasks:
- Rename `.env.j2` files to standardized `<service>.env.j2` across roles (e.g., `immich.env.j2`, `jellyfin.env.j2`).
- Update Ansible tasks to reflect the new template file names.
- Replace `enable_letsencrypt` with `proxy_enable_letsencrypt` in all relevant files for better context and usage standardization.
- Refactor variable names in group variables, defaults, and templates to improve naming consistency and clarity (e.g., `enable_gpu` → `system_enable_gpu`, `prometheus_*` → `monitoring_prometheus_*`).
- Adjust Docker Compose and Prometheus configuration files to align with renamed variables.
- Update documentation to reflect changes in variable naming and .env template organization.

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -85,9 +85,9 @@
       {
         "log-driver": "json-file",
         "log-opts": {
-          "max-size": "{{ docker_log_max_size }}",
-          "max-file": "{{ docker_log_max_file }}"
-        }{% if enable_gpu | bool %},
+          "max-size": "{{ docker_daemon_log_max_size }}",
+          "max-file": "{{ docker_daemon_log_max_file }}"
+        }{% if system_enable_gpu | bool %},
         "runtimes": {
           "nvidia": {
             "path": "nvidia-container-runtime",
