Refactor environment variable templates and update associated tasks:
- Rename `.env.j2` files to standardized `<service>.env.j2` across roles (e.g., `immich.env.j2`, `jellyfin.env.j2`).
- Update Ansible tasks to reflect the new template file names.
- Replace `enable_letsencrypt` with `proxy_enable_letsencrypt` in all relevant files for better context and usage standardization.
- Refactor variable names in group variables, defaults, and templates to improve naming consistency and clarity (e.g., `enable_gpu` → `system_enable_gpu`, `prometheus_*` → `monitoring_prometheus_*`).
- Adjust Docker Compose and Prometheus configuration files to align with renamed variables.
- Update documentation to reflect changes in variable naming and .env template organization.

--- a/docker/app/immich/docker-compose.yml
+++ b/docker/app/immich/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   immich-postgres:
     container_name: immich_postgres
     image: ghcr.io/immich-app/postgres:{{ docker_versions.immich_postgres }}
-    restart: always
+    restart: {{ docker_restart_policy }}
     deploy:
       resources:
         limits:
@@ -42,7 +42,7 @@ services:
         condition: service_healthy
       immich-machine-learning:
         condition: service_started
-    restart: always
+    restart: {{ docker_restart_policy }}
     deploy:
       resources:
         limits:
@@ -74,7 +74,7 @@ services:
     volumes:
       - ${DATA_PATH}/immich/model-cache:/cache
     env_file: .env
-    restart: always
+    restart: {{ docker_restart_policy }}
     deploy:
       resources:
         limits:
