--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   traefik:
-    image: traefik:{{ docker_versions.traefik }}
+    image: traefik:{{ docker_versions.common.traefik }}
     container_name: traefik
     restart: unless-stopped
     security_opt:
@@ -47,7 +47,7 @@ services:
         condition: service_healthy
 
   docker-socket-proxy:
-    image: tecnativa/docker-socket-proxy:{{ docker_versions.docker_socket_proxy }}
+    image: tecnativa/docker-socket-proxy:{{ docker_versions.common.docker_socket_proxy }}
     container_name: docker-socket-proxy
     restart: unless-stopped
     security_opt:
@@ -84,3 +84,4 @@ networks:
     name: traefik-proxy
   docker-socket:
     internal: true
+
